Locked down CORS origins to explicit domain whitelist